<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">b-WORLD!</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="username">Username</string>
     <string name="password_login">Password</string>
    <string name="password">PASSWORD</string>
    <string name="login">Login</string>
    <string name="Internet_check">Cannot continue at this time, Please check your internet connection</string>
    <string name="Enter_email">Please enter a valid email</string>
    <string name="enter_password">Enter Password</string>
    <string name="Enter_valid_email">Please enter a valid email</string>
    <string name="check_credentials">Please check your credentials and try again</string>
    <string name="login_success">Successfully Logged In</string>
    <string name="facebook_signup">Sign up with Facebook</string>
    <string name="scenic_route">Or take the scenic route</string>
    <string name="email_signup">Sign up with Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">EMAIL</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="phone">PHONE</string>
    <string name="gender">GENDER</string>
    <string name="join_b_world">Join B-WORLD</string>
    <string name="see_our_terms_of_service_privacy_policy">See our terms of service &amp; privacy policy</string>
    <string name="auto_sms_sent">Auto sms sent</string>
    <string name="enter_valid_fname">Please enter a valid First name</string>
    <string name="enter_valid_lname">Please enter a valid Last name</string>
    <string name="enter_email">Please enter email</string>
    <string name="Enter_password">Please enter password</string>
    <string name="Enter_phone">Please enter phonenumber</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="smsservice">SMSService</string>
    <string name="contacts">Contacts</string>
    <string name="check_autosms">Please check the auto sms functionality</string>
    <string name="buy_categories">Buy Categories</string>
    
     <string name="common_error">Cannot continue at this time, please try again later</string>
    
     <string name="ok">OK</string>
    
     <string name="select_contact">Please select atleast one contact</string>
     
      <string name="signup_success">Successfully signed up</string>
     
      <string name="select_contact_for_sms">Please select advertisements for sending messages</string>
     
      <string name="contact_limit">Contacts for sending sms should be less than 50</string>
     
      <string name="select_profile_picture">Please select a profile picture</string>
  
      <string name="cancel">Cancel</string>
      
       <string-array name="Gender">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
        <string name="select_gender">Please select a gender</string>
        <string name="select_dob">Please Select Date of Birth</string>
        <string name="no_contacts_found">No contacts Found</string>
        <string name="select_contacts">SELECT CONTACTS</string>
        <string name="search_contacts">Search Contacts</string>
        <string name="add_contacts">Add Contacts</string>
        <string name="login_head">Login</string>
        <string name="main_page_head">Main Page</string>
        <string name="registration_head">Registration</string>
        <string name="advertisements_head">Advertisements</string>
        <string name="withdraw_head">Withdraw</string>
        <string name="b_world_home_heading">B-WORLD!</string>
        <string name="check_in_home_page">Check-In</string>
        <string name="profile_home_page">Profile</string>
        <string name="friends_home_page">Friends</string>
        <string name="maps_home_page">Maps</string>
        <string name="withdraw_home_page">Withdraw</string>
        <string name="my_album_profile_page">My Album</string>
        <string name="about_me_profile">About Me</string>
        <string name="sms_earnings_profile">SMS earnings</string>
        <string name="lbm_status_profile">LBM Status</string>
        <string name="purchase_details_profile">Purchase Details</string>
        <string name="total_sms_sent_profile">Total sms sent</string>
        <string name="sms_sent_today_profile">SMS sent Today</string>
        <string name="logout_confirmation">Do you wish to logout from the application?</string>
        <string name="yes_logout_alert">Yes</string>
        <string name="no_logout_alert">No</string>
        <string name="track_friends_friend_list">FRIEND LIST</string>
        <string name="track_friends_trusted_friend">TRUSTED FRIEND</string>
        <string name="track_friends_map">MAP</string>
        <string name="friend_request_success">Friend Request Sent Successfully</string>
        <string name="friendlist_nil">No friends Found</string>
      
</resources>