
 <RelativeLayout 
     xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
    android:layout_height="wrap_content"
   
         >
         
     <RelativeLayout
         android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/relative_header" ></RelativeLayout>
<LinearLayout 
   
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_below="@+id/relative_header"
    android:background="@drawable/bg"
    android:padding="@dimen/home_page_padding"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        
        android:imeOptions="actionNext"
        android:hint="@string/username" >

     
    </EditText>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_login"
        android:imeOptions="actionDone"
       android:layout_marginTop="5dp"
        
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/button_blue"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:text="@string/login" />

</LinearLayout>
</RelativeLayout>