<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     >
    
    <Button
        android:id="@+id/btn_friends"
        android:layout_width="0dp"
        android:layout_weight="0.55"
        android:layout_height="wrap_content"
          android:paddingTop="15dp"
      	   android:paddingBottom="15dp"
      	   android:paddingLeft="5dp"
      	   android:paddingRight="5dp"
         android:background="@drawable/white"
        android:text="@string/track_friends_friend_list" />
    
    <Button
        android:id="@+id/btn_trusted_friends"
      	 android:layout_width="0dp"
        android:layout_weight="0.75"
      	   android:paddingTop="15dp"
      	   android:paddingBottom="15dp"
      	   android:paddingLeft="5dp"
      	   android:paddingRight="5dp"
       android:background="@drawable/white"
        android:layout_height="wrap_content"
        android:text="@string/track_friends_trusted_friend" />
    
    <Button
        android:id="@+id/btn_map"
         android:layout_width="0dp"
        android:layout_weight="0.50"
        android:layout_height="wrap_content"
          android:paddingTop="15dp"
      	   android:paddingBottom="15dp"
      	   android:paddingLeft="5dp"
      	   android:paddingRight="5dp"
        android:background="@drawable/white"
        android:text="@string/track_friends_map" />

</LinearLayout>

<ListView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:cacheColorHint="@android:color/transparent"
    android:id="@+id/list"></ListView>
</LinearLayout>