<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relative_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/relative_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/verify_info_thumb" />

            <ProgressBar
                android:id="@+id/progress_Profile"
                style="@android:style/Widget.ProgressBar.Small.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/img_profile"
                android:layout_centerVertical="true"
                android:layout_marginRight="25dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="false"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/relative_image"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txt_lname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_first"
        android:layout_marginTop="@dimen/header_padding"
        android:background="@android:color/white"
        android:padding="@dimen/header_padding" >

        <Button
            android:id="@+id/btn_myalbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
            android:text="@string/my_album_profile_page" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_myalbum"
            android:layout_marginLeft="5dp"
            android:stretchColumns="*"
            android:layout_marginTop="10dp" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_me_profile" />

               <!--  <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" /> -->

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView02"
                     android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sms_earnings_profile" />

                <TextView
                    android:id="@+id/txt_earnings"
                     android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                 android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView04"
                     android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbm_status_profile" />

                <TextView
                    android:id="@+id/TextView03"
                     android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                  android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView06"
                     android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase_details_profile" />

                <TextView
                    android:id="@+id/TextView05"
                     android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </TableRow>
            
             <TableRow
                android:id="@+id/tableRow5"
                  android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView06"
                     android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_sms_sent_profile" />

                <TextView
                    android:id="@+id/txt_total_count"
                     android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </TableRow>
          
             <TableRow
                android:id="@+id/tableRow6"
                  android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView7"
                     android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sms_sent_today_profile" />

                <TextView
                    android:id="@+id/txt_today_count"
                     android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </TableRow>

        </TableLayout>

    </RelativeLayout>

</RelativeLayout>